--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
     </main>
     <!-- Main Section ENd -->
 
-    <script src="./script.js" type="text/javascript"></script>
+    <script src="./script.js" defer></script>
 </body>
 
 </html>
