--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="relative flex flex-col items-center justify-center pb-20">
                     <div class="absolute top-30 z-10 left-1/4 size-72 bg-pink-600 blur-[300px]"></div>
                     <a href="javascript:void(0)"
-                        class="group flex items-center gap-2 rounded-full p-1 pr-3 mt-44 text-pink-100 bg-pink-200/15">
+                        class="group flex whitespace-nowrap items-center gap-2 rounded-full p-1 pr-3 mt-44 text-pink-100 bg-pink-200/15">
                         <span class="bg-pink-800 text-white text-xs py-1 px-3.5 rounded-full uppercase">New</span>
                         <p class="flex items-center gap-1">
                             <span>Try 30 days free trial option </span>
@@ -86,7 +86,7 @@
                     </h1>
                     <p class="text-base text-center max-w-lg mt-6 text-slate-200">No complexity. No noise. Just clean,
                         reliable automation to boost your team’s efficiency.</p>
-                    <div class="flex items-center gap-4 mt-8">
+                    <div class="flex whitespace-nowrap items-center gap-4 mt-8">
                         <button
                             class="bg-pink-600 px-6 py-2.5 rounded-full hover:bg-pink-700 transition-all duration-300 ease-in cursor-pointer">Get
                             started</button>
